--- a/loganget/conf/config.ini
+++ b/loganget/conf/config.ini
@@ -1,6 +1,7 @@
 [kafka]
-address=192.168.101.75:9092
-topic=web_log
-
-[taillog]
-path=./my.log
+address=192.168.1.102:9092
+chan_max_size=100000
+[etcd]
+etcdaddrees=192.168.1.102:2379
+timeout=5
+collect_log_key=/logangent/collect_config
