--- a/loganget/conf/config.ini
+++ b/loganget/conf/config.ini
@@ -4,4 +4,4 @@ chan_max_size=100000
 [etcd]
 etcdaddrees=192.168.1.102:2379
 timeout=5
-collect_log_key=/logangent/collect_config
+collect_log_key=/logangent/%s/collect_config
